# aare

./: .CMakeLists.txt.swp  .clang-format  .clang-tidy  .clang-uml  .doxygen.config  .env  .env.dev  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  COPYING  README.md  RELEASE.md  VERSION  aare-environment.yml  pyproject.toml  typos.toml  update_version.py
benchmarks/: CMakeLists.txt  calculateeta_benchmark.cpp  clusterfinder_benchmark.cpp  fit_benchmark.cpp  ndarray_benchmark.cpp  reduce_benchmark.cpp
core/: CMakeLists.txt
core/src/: CircularFifo.test.cpp  DType.cpp  Frame.cpp  IFrame.cpp  ImageData.cpp  ZmqSocket.cpp  defs.cpp
core/test/: CircularFifo.test.cpp  DType.test.cpp  Frame.test.cpp  NDArray.test.cpp  NDView.test.cpp  ProducerConsumerQueue.test.cpp  defs.test.cpp  frame.test.cpp  wrappers.test.cpp
docs/: CMakeLists.txt  Doxyfile.in  commands_multimodule.md  conf.py.in
docs/diagrams/: aare_class.puml  aare_class_simplified.puml  core_class.puml  file_io_class.puml  network_io_class.puml
docs/html/: CircularFifo_8hpp.html  CircularFifo_8hpp_source.html  CircularFifo_8test_8cpp.html  DType_8cpp.html  DType_8hpp.html  DType_8hpp_source.html  DType_8test_8cpp.html  FileInterface_8hpp.html  FileInterface_8hpp_source.html  File_8cpp.html  File_8hpp.html  File_8hpp_source.html  File_8py.html  Frame_8cpp.html  Frame_8hpp.html  Frame_8hpp_source.html  Frame_8py.html  Frame_8test_8cpp.html  NDArray_8hpp.html  NDArray_8hpp_source.html  NDArray_8test_8cpp.html  NDView_8hpp.html  NDView_8hpp_source.html  NDView_8test_8cpp.html  NumpyFile_8cpp.html  NumpyFile_8hpp.html  NumpyFile_8hpp_source.html  NumpyFile_8test_8cpp.html  NumpyHelpers_8cpp.html  NumpyHelpers_8hpp.html  NumpyHelpers_8hpp_source.html  NumpyHelpers_8test_8cpp.html  ProducerConsumerQueue_8hpp.html  ProducerConsumerQueue_8hpp_source.html  ProducerConsumerQueue_8test_8cpp.html  README_8md.html  RawFile_8cpp.html  RawFile_8hpp.html  RawFile_8hpp_source.html  RawFile_8test_8cpp.html  (+198 more)
docs/latex/: CircularFifo_8hpp.tex  CircularFifo_8hpp_source.tex  CircularFifo_8test_8cpp.tex  DType_8cpp.tex  DType_8hpp.tex  DType_8hpp_source.tex  DType_8test_8cpp.tex  FileInterface_8hpp.tex  FileInterface_8hpp_source.tex  File_8cpp.tex  File_8hpp.tex  File_8hpp_source.tex  File_8py.tex  Frame_8cpp.tex  Frame_8hpp.tex  Frame_8hpp_source.tex  Frame_8py.tex  Frame_8test_8cpp.tex  NDArray_8hpp.tex  NDArray_8hpp_source.tex  NDArray_8test_8cpp.tex  NDView_8hpp.tex  NDView_8hpp_source.tex  NDView_8test_8cpp.tex  NumpyFile_8cpp.tex  NumpyFile_8hpp.tex  NumpyFile_8hpp_source.tex  NumpyFile_8test_8cpp.tex  NumpyHelpers_8cpp.tex  NumpyHelpers_8hpp.tex  NumpyHelpers_8hpp_source.tex  NumpyHelpers_8test_8cpp.tex  ProducerConsumerQueue_8hpp.tex  ProducerConsumerQueue_8hpp_source.tex  ProducerConsumerQueue_8test_8cpp.tex  RawFile_8cpp.tex  RawFile_8hpp.tex  RawFile_8hpp_source.tex  RawFile_8test_8cpp.tex  SubFile_8cpp.tex  (+144 more)
docs/src/: Cluster.rst  ClusterFile.rst  ClusterFinder.rst  ClusterFinderMT.rst  ClusterVector.rst  Consume.rst  Dtype.rst  File.rst  Frame.rst  Hdf5File.rst  Hdf5MasterFile.rst  Installation.rst  Interpolation.rst  JungfrauDataFile.rst  NDArray.rst  NDView.rst  Pedestal.rst  Philosophy.rst  RawFile.rst  RawMasterFile.rst  RawSubFile.rst  Requirements.rst  Tests.rst  VarClusterFinder.rst  Workflow.rst  _install.rst  algorithm.rst  index.rst  pyClusterFile.rst  pyClusterVector.rst  pyCtbRawFile.rst  pyFit.rst  pyHdf5File.rst  pyHdf5MasterFile.rst  pyInterpolation.rst  pyJungfrauDataFile.rst  pycalibration.rst
examples/: CMakeLists.txt  clusterFileV3_example.cpp  clusterFileV3_read_example.cpp  clusterFileV3_write_example.cpp  cluster_example.cpp  cluster_finder_example.cpp  clustering.cpp  json.cpp  json_example.cpp  json_file_read.cpp  logger_example.cpp  main.cpp  multi_port_read.cpp  multiport_example.cpp  multithread_example.cpp  mythen_example.cpp  numpy.cpp  numpy_example.cpp  numpy_file_read.cpp  numpy_read_example.cpp  numpy_write_example.cpp  raw_example.cpp  read_old_cluster_format.cpp  reorder_moench_example.cpp  restream_example.cpp  sink.cpp  testing_pedestal.cpp  vlen_cluster_example.cpp  worker.cpp  zmq_example.cpp  zmq_multi_receiver.cpp  zmq_receiver_example.cpp  zmq_restream_example.cpp  zmq_sender_example.cpp  zmq_sink.cpp  zmq_task_ventilator.cpp  zmq_worker.cpp
file_io/: CMakeLists.txt
file_io/src/: ClusterFile.cpp  File.cpp  FileFactory.cpp  JsonFile.cpp  JsonFileFactory.cpp  NumpyFile.cpp  NumpyFileFactory.cpp  NumpyHelpers.cpp  RawFile.cpp  RawFileFactory.cpp  RawFileHelpers.cpp  SubFile.cpp  helpers.cpp
file_io/test/: ClusterFile.test.cpp  NumpyFile.test.cpp  NumpyHelpers.test.cpp  RawFile.test.cpp
minuit2_bug_reproducer/: CMakeLists.txt  reproducer.cpp
network_io/: CMakeLists.txt
network_io/src/: ZmqHeader.cpp  ZmqMultiReceiver.cpp  ZmqSingleReceiver.cpp  ZmqSink.cpp  ZmqSocket.cpp  ZmqSocketReceiver.cpp  ZmqSocketSender.cpp  ZmqVentilator.cpp  ZmqWorker.cpp
network_io/test/: ZmqHeader.test.cpp
python/: CMakeLists.txt
python/aare/: Cluster.py  ClusterFinder.py  ClusterVector.py  CtbRawFile.py  File.py  Frame.py  Hdf5File.py  ImageData.py  RawFile.py  ScanParameters.py  __init__.py  _version.py  func.py  (+3 more)
src/: CMakeLists.txt  CalculateEta.test.cpp  Cluster.test.cpp  ClusterFile.cpp  ClusterFile.test.cpp  ClusterFinder.test.cpp  ClusterFinderCUDA.test.cu  ClusterFinderCUDA_old.test.cu  ClusterFinderMT.test.cpp  ClusterVector.test.cpp  CtbRawFile.cpp  DetectorGeometry.cpp  DetectorGeometry.test.cpp  Dtype.cpp  Dtype.test.cpp  File.cpp  FilePtr.cpp  Fit.cpp  Frame.cpp  Frame.test.cpp  Hdf5File.cpp  Hdf5MasterFile.cpp  Hdf5MasterFile.test.cpp  Interpolation.test.cpp  Interpolator.cpp  JungfrauDataFile.cpp  JungfrauDataFile.test.cpp  Makefile  NDArray.test.cpp  NDView.test.cpp  NumpyFile.cpp  NumpyFile.test.cpp  NumpyHelpers.cpp  NumpyHelpers.test.cpp  Pedestal.test.cpp  PedestalTrackingPixelHistogram.cpp  PixelHistogram.cpp  PixelHistogram.test.cpp  PixelMap.cpp  ProducerConsumerQueue.test.cpp  (+28 more)
tests/: CMakeLists.txt  friend_test.hpp  test.cpp  test_config.hpp.in  test_macros.hpp
(+607 files in other folders)
